# LGSGS

./: .env  .gitignore  manage.py  pyproject.toml  requirements.txt
LGSGS/: asgi.py  celery.py  settings.py  urls.py
accounting/: backend.py  classes.py  models.py  urls.py  views.py
accounting/migrations/: 0002_alter_cryptobook_wallet_alter_disnatbook_wallet.py  0005_alter_cryptobook_price_alter_cryptobook_quantity_and_more.py
accounts/: admin.py  backend.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_user_website.py  0006_tradercredentials_uid_and_more.py  0007_alter_user_website.py
assets/: admin.py  backend.py  forms.py  models.py  tasks.py  tests.py  urls.py  views.py
assets/htmx_api/: urls.py  views.py
assets/migrations/: 0001_initial.py  0004_trader_asset_trader.py  0005_asset_date.py  0006_alter_asset_options.py  0009_alter_asset_ticker_alter_asset_trader.py  0011_alter_asset_options.py  0012_asset_staking.py  0015_asset_fees_per_unit.py  0017_alter_asset_options_remove_asset_ticker_and_more.py
src/: celery_LGSS  env_template
src/LGSGS/: settings.py  wsgi.py
src/accounting/: admin.py  backend.py  urls.py
src/accounts/: forms.py  urls.py
src/assets/: tasks.py  views.py
src/templates/: about.html  base.html  robots.txt
src/wallets/: admin.py  forms.py
static/css/: style.css
static/js/: data_tables.js
templates/: about.html  base.html  footer.html  header.html  index.html  js.html  navbar.html
wallets/: admin.py  backend.py  forms.py  models.py  urls.py  views.py
wallets/htmx-requests/: urls.py  views.py
wallets/htmx_api/: urls.py  views.py
wallets/migrations/: 0003_wallet_lastviewed_alter_transfer_type.py  0005_alter_transaction_ticker_alter_transaction_trader.py  0006_transaction_change_transaction_currency_and_more.py  0009_profit.py  (+9 more)
(+96 files in other folders)
