[project]
name = "lgsgs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiodns>=4.0.4",
    "aiohappyeyeballs>=2.6.2",
    "aiohttp>=3.13.5",
    "aiosignal>=1.4.0",
    "amqp>=5.3.1",
    "appdirs>=1.4.4",
    "asgiref>=3.11.1",
    "async-timeout>=5.0.1",
    "attrs>=26.1.0",
    "backoff>=2.2.1",
    "beautifulsoup4>=4.14.3",
    "billiard>=4.2.4",
    "ccxt>=4.5.54",
    "celery>=5.4.0",
    "certifi>=2026.5.20",
    "cffi>=2.0.0",
    "charset-normalizer>=3.4.7",
    "coinbase-advanced-py>=1.8.3",
    "crispy-bootstrap5>=2026.3",
    "cron-descriptor>=2.0.8",
    "cryptography>=48.0.0",
    "curl-cffi>=0.15.0",
    "django==4.2.13",
    "django-celery-beat>=2.8.1",
    "django-crispy-forms>=2.5",
    "django-redis>=6.0.0",
    "django-timezone-field>=7.2.1",
    "frozendict>=2.4.7",
    "frozenlist>=1.8.0",
    "gunicorn>=26.0.0",
    "html5lib>=1.1",
    "idna>=3.16",
    "kombu>=5.4.2",
    "lxml>=6.1.1",
    "multidict>=6.7.1",
    "multitasking>=0.0.13",
    "mysqlclient>=2.2.8",
    "numpy>=2.4.6",
    "packaging>=26.2",
    "pandas>=3.0.3",
    "peewee>=4.0.6",
    "pillow>=12.2.0",
    "platformdirs>=4.9.6",
    "prompt-toolkit>=3.0.52",
    "propcache>=0.5.2",
    "pycares>=5.0.1",
    "pycparser>=3.0",
    "pyjwt>=2.13.0",
    "python-crontab>=3.3.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.2",
    "pytz==2024.1",
    "redis==5.0.4",
    "requests>=2.34.2",
    "six>=1.17.0",
    "soupsieve>=2.8.3",
    "sqlparse>=0.5.5",
    "typing-extensions>=4.15.0",
    "tzdata==2024.1",
    "urllib3>=2.7.0",
    "vine>=5.1.0",
    "webencodings>=0.5.1",
    "websockets>=13.1",
    "yarl>=1.24.2",
    "yfinance>=1.3.0",
]
